[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/Level.gd" type="Script" id=1]

[node name="Level" type="Node2D"]
script = ExtResource( 1 )

[node name="LevelTimer" type="Timer" parent="."]
one_shot = true

[node name="TimerBar" type="ProgressBar" parent="."]
margin_left = 1088.0
margin_right = 2988.0
margin_bottom = 48.0
rect_rotation = 89.9999
value = 10.0
percent_visible = false
[connection signal="timeout" from="LevelTimer" to="." method="_on_LevelTimer_timeout"]
